water bottle 2- daily

--- a/daily.ipynb
+++ b/daily.ipynb
@@ -10,21 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87613d4b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def numWaterBottles(self, numBottles: int, numExchange: int) -> int:\n",
@@ -57,9 +46,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b0ab7bb",
+   "metadata": {},
+   "source": [
+    "## Water Bottles II (LC-3100)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "737d8afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxBottlesDrunk(self, numBottles: int, numExchange: int) -> int:\n",
+    "        # Initialise the variables \n",
+    "        filled = numBottles\n",
+    "        empty = 0\n",
+    "        result = 0\n",
+    "\n",
+    "        # Loop until there is sinlge filled bottle\n",
+    "        while filled > 0:\n",
+    "            # Drink all the available filled bottles \n",
+    "            result += filled\n",
+    "\n",
+    "            # Increment empty counter and reduce filled \n",
+    "            empty += filled\n",
+    "            filled = 0\n",
+    "\n",
+    "            # Check if empty bottles are more than exchanges that can be made\n",
+    "            if empty >= numExchange:\n",
+    "                # Exchange empty for filled \n",
+    "                filled += 1\n",
+    "                # Reduce count of empty \n",
+    "                empty -= numExchange\n",
+    "                # Increment numExchange \n",
+    "                numExchange += 1\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.maxBottlesDrunk(numBottles = 10, numExchange = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8c0998",
    "metadata": {},
    "outputs": [],
    "source": []
