daily- pacific atlantic water flow

--- a/daily.ipynb
+++ b/daily.ipynb
@@ -90,6 +90,89 @@
     "sol = Solution()\n",
     "sol.maxBottlesDrunk(numBottles = 10, numExchange = 3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c4d7607",
+   "metadata": {},
+   "source": [
+    "## Pacific Atlantic Water Flow (LC-417)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c03ceb4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def pacificAtlantic(self, heights: List[List[int]]) -> List[List[int]]:\n",
+    "        # Get the dimensions of the array \n",
+    "        rows, cols= len(heights), len(heights[0])\n",
+    "\n",
+    "        # Create dummy array for marking water flow for that oceans\n",
+    "        pacific = [[False]*cols for _ in range(rows)]\n",
+    "        atlantic = [[False]*cols for _ in range(rows)]\n",
+    "\n",
+    "        # Define the dfs funciton\n",
+    "        def dfs(curr_row, curr_col, visited):\n",
+    "            # Check if this node is visited\n",
+    "            if visited[curr_row][curr_col]:\n",
+    "                return\n",
+    "            \n",
+    "            # Mark the current as visited \n",
+    "            visited[curr_row][curr_col] = True\n",
+    "            \n",
+    "            # Define the next possible node change \n",
+    "            changes = [(-1,0), (1,0), (0,-1), (0,1)]\n",
+    "\n",
+    "            # Loop through them \n",
+    "            for dr, dc in changes:\n",
+    "                new_row = curr_row+dr\n",
+    "                new_col = curr_col+dc\n",
+    "                # Check for conditions \n",
+    "                if 0 <= new_row < rows and 0 <= new_col < cols and heights[new_row][new_col] >= heights[curr_row][curr_col]:\n",
+    "                    # Regression to this new row and col\n",
+    "                    dfs(new_row, new_col, visited)\n",
+    "\n",
+    "        # Traverse top from each point in pacific\n",
+    "        for i in range(cols):\n",
+    "            dfs(0, i, pacific)\n",
+    "\n",
+    "        for j in range(rows):\n",
+    "            dfs(j, 0, pacific)\n",
+    "\n",
+    "        # Traverse top from each point in atlantic\n",
+    "        for i in range(rows):\n",
+    "            dfs(i, cols-1, atlantic)\n",
+    "        \n",
+    "        for j in range(cols):\n",
+    "            dfs(rows-1, j, atlantic)\n",
+    "\n",
+    "        # Check for matching rows and cols \n",
+    "        results = []\n",
+    "        for row in range(rows):\n",
+    "            for col in range(cols):\n",
+    "                if pacific[row][col] and atlantic[row][col]:\n",
+    "                    # Append to results \n",
+    "                    results.append((row, col))\n",
+    "        \n",
+    "        return results\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.pacificAtlantic(heights = [[1,2,2,3,5],[3,2,3,4,4],[2,4,5,3,1],[6,7,1,4,5],[5,1,1,2,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d29a9fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
