wrong solution update

--- a/daily.ipynb
+++ b/daily.ipynb
@@ -167,12 +167,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a2bb526",
+   "metadata": {},
+   "source": [
+    "## Swim in Rising Water (LC-778)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "5d29a9fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "class Solution:\n",
+    "    def swimInWater(self, grid: List[List[int]]) -> int:\n",
+    "        # Calculate number of rows and columns \n",
+    "        all_rows, all_cols = len(grid), len(grid[0])\n",
+    "        \n",
+    "        # Mark the starting nodes \n",
+    "        row, col = 0, 0 \n",
+    "\n",
+    "        # Create a set to mark a node as visited \n",
+    "        visited = set()\n",
+    "\n",
+    "        # Write dfs \n",
+    "        def dfs(row, col, visited, max_val):\n",
+    "            # Mark the node as visited \n",
+    "            visited.add(grid[row][col])\n",
+    "\n",
+    "            # Check if end is reached \n",
+    "            if row == all_rows -1 and col == all_cols -1:\n",
+    "                # Reached end\n",
+    "                return max_val\n",
+    "\n",
+    "            # Check for all possible dierections that can be traversed \n",
+    "            directions = [(1,0),(-1,0),(0,1),(0,-1)]\n",
+    "\n",
+    "            # For each position create a new heap to get the minimum \n",
+    "            heap = []\n",
+    "\n",
+    "            # Loop through the direcitons \n",
+    "            for dr, dc in directions:\n",
+    "                # Calculate new values \n",
+    "                new_row = row+dr\n",
+    "                new_col = col+dc\n",
+    "\n",
+    "                # Check if it lies within boundary \n",
+    "                if 0 <= new_row < all_rows and 0 <= new_col < all_cols:\n",
+    "                    if grid[new_row][new_col] not in visited:\n",
+    "                        # Add the node to heap\n",
+    "                        heapq.heappush(heap, (grid[new_row][new_col], (new_row, new_col)))\n",
+    "\n",
+    "            # Get the minimum from the heap and use dfs \n",
+    "            val, coord =  heapq.heappop(heap)\n",
+    "\n",
+    "            # Compare the max\n",
+    "            max_val = max(max_val, val)\n",
+    "            # print(val, coord, max_val)\n",
+    "\n",
+    "            # Get the coordinates\n",
+    "            r,c = coord\n",
+    "\n",
+    "            # Rerun the dfs\n",
+    "            return dfs(r, c, visited, max_val)\n",
+    "    \n",
+    "        # Start the dfs \n",
+    "        return dfs(row, col, visited, grid[row][col])\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.swimInWater(grid = [[10,12,4,6],[9,11,3,5],[1,7,13,8],[2,0,15,14]])\n"
+   ]
   }
  ],
  "metadata": {
