--- a/daily.ipynb
+++ b/daily.ipynb
@@ -175,8 +175,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a65e651",
+   "metadata": {},
+   "source": [
+    "#### Not Accurate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "5d29a9fc",
    "metadata": {},
    "outputs": [
@@ -186,7 +194,7 @@
        "15"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +246,6 @@
     "\n",
     "            # Compare the max\n",
     "            max_val = max(max_val, val)\n",
-    "            # print(val, coord, max_val)\n",
     "\n",
     "            # Get the coordinates\n",
     "            r,c = coord\n",
@@ -251,6 +258,53 @@
     "\n",
     "sol = Solution()\n",
     "sol.swimInWater(grid = [[10,12,4,6],[9,11,3,5],[1,7,13,8],[2,0,15,14]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "035c3302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def swimInWater(self, grid: List[List[int]]) -> int:\n",
+    "        # Initialise variables \n",
+    "        total_rows, total_cols = len(grid), len(grid[0])\n",
+    "        result = grid[0][0]\n",
+    "        visited = set()\n",
+    "        directions = [(-1,0),(1,0),(0,-1),(0,1)]\n",
+    "        heap = [(grid[0][0], 0,0)]\n",
+    "\n",
+    "        # Start the loop to fetch elements from heap \n",
+    "        while heap:\n",
+    "            # Pull the first element from the heap \n",
+    "            t, r, c = heapq.heappop(heap)\n",
+    "\n",
+    "            # Check for results \n",
+    "            result = max(result, t)\n",
+    "\n",
+    "            # Check if its the end \n",
+    "            if r == total_rows - 1 and c == total_cols - 1:\n",
+    "                return result\n",
+    "\n",
+    "            # Check if it has been visited\n",
+    "            if (r,c) in visited:\n",
+    "                continue\n",
+    "\n",
+    "            # Mark the node as visited\n",
+    "            visited.add((r,c))\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                # Get the values of new row and column\n",
+    "                nr, nc = r+dr, c+dc\n",
+    "\n",
+    "                # Check for its boundary conditions \n",
+    "                if 0 <= nr < total_rows and 0 <= nc < total_cols and (nr,nc) not in visited:\n",
+    "                    # Add to heap \n",
+    "                    heapq.heappush(heap, (grid[nr][nc], nr, nc))\n",
+    "                    \n",
+    "        return result"
    ]
   }
  ],
