--- a/daily.ipynb
+++ b/daily.ipynb
@@ -306,6 +306,99 @@
     "                    \n",
     "        return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f09b77c5",
+   "metadata": {},
+   "source": [
+    "## Avoid Flood in The City (LC-1488)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9cc27d",
+   "metadata": {},
+   "source": [
+    "#### 1. My Approach (Not optimal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dca92b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, 69, 1, 1, -1]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def avoidFlood(self, rains: List[int]) -> List[int]:\n",
+    "        # Initialise the queue\n",
+    "        queue = deque()\n",
+    "        result = []\n",
+    "\n",
+    "        #  Loop through the array \n",
+    "        for rain in rains:\n",
+    "            # Check for no rain condition\n",
+    "            if rain == 0:\n",
+    "                if queue:\n",
+    "                    # Day is dry, lake can be dried\n",
+    "                    # Fetch one lake from queue\n",
+    "                    dried_lake = queue.popleft()\n",
+    "                    # Append the result\n",
+    "                    result.append(dried_lake)\n",
+    "                    continue\n",
+    "\n",
+    "                else:\n",
+    "                    result.append(1)\n",
+    "                    continue\n",
+    "            \n",
+    "            # Append the lake number in the queue if not present \n",
+    "            # Check if its already present \n",
+    "            if rain not in queue:\n",
+    "                queue.append(rain)\n",
+    "                # Add -1 to result \n",
+    "                result.append(-1)\n",
+    "\n",
+    "            else:\n",
+    "                # Flooding will happen in that lake\n",
+    "                return []\n",
+    "            \n",
+    "        return result\n",
+    "    \n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.avoidFlood(rains = [69,0,0,0,69])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52f33b7f",
+   "metadata": {},
+   "source": [
+    "#### 2. Optimal Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6b38c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
