dailt- avoid flood

--- a/daily.ipynb
+++ b/daily.ipynb
@@ -187,18 +187,7 @@
    "execution_count": null,
    "id": "5d29a9fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import heapq\n",
     "\n",
@@ -325,21 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dca92b45",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-1, 69, 1, 1, -1]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import deque\n",
     "from typing import List\n",
@@ -396,6 +374,155 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aa6b38c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sortedcontainers import SortedSet\n",
+    "\n",
+    "class Solution:\n",
+    "    def avoidFlood(self, rains: List[int]) -> List[int]:\n",
+    "        # Initialise result set with -1 \n",
+    "        result = [-1] * len(rains)\n",
+    "\n",
+    "        # Initialize the variables \n",
+    "        last_rained = {}\n",
+    "        dry_days = SortedSet()\n",
+    "        \n",
+    "        # Loop trough the rain days \n",
+    "        for today, lake in enumerate(rains):\n",
+    "            # Check if its a dry day \n",
+    "            if lake == 0:\n",
+    "                # Add this to dry day collections\n",
+    "                dry_days.add(today)\n",
+    "                continue\n",
+    "\n",
+    "            # Check if it has already rained here in past\n",
+    "            if lake in last_rained:\n",
+    "                # Fetch the day when it rained \n",
+    "                day_last_rained = last_rained[lake]\n",
+    "\n",
+    "                # Check if there is any dry day between last rained day and current day\n",
+    "                suitable_dry_day = dry_days.bisect_right(day_last_rained)\n",
+    "\n",
+    "                # Check for suitable_dry_day\n",
+    "                if suitable_dry_day == len(dry_days):\n",
+    "                    # No dry day available suiting the condition \n",
+    "                    # Impossible to avoid floods\n",
+    "                    return []\n",
+    "                \n",
+    "                # Dry day available suiting the condition , greedily use this\n",
+    "                # Dry the this lake on fetched dry day \n",
+    "                dry_day = dry_days[suitable_dry_day]\n",
+    "                result[dry_day] = lake\n",
+    "\n",
+    "                # Remove this dry day from dry_days \n",
+    "                dry_days.discard(dry_day)\n",
+    "\n",
+    "            # Lake not in last rained\n",
+    "            # Add this lake\n",
+    "            last_rained[lake] = today\n",
+    "    \n",
+    "        # Check if there is any dry day still left \n",
+    "        for dry_day in dry_days:\n",
+    "            # Fetch the indexes and fill random values \n",
+    "            result[dry_day] = 1\n",
+    "\n",
+    "        return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6a0049ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sortedcontainers import SortedSet\n",
+    "s = SortedSet()\n",
+    "s.add(1)\n",
+    "s.add(5)\n",
+    "s.add(3)\n",
+    "s.add(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5a5f001f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in s:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18d06a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.bisect_right(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "757bfb5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.discard(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9eb7ce6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SortedSet([4, 5])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "569d94b0",
    "metadata": {},
    "outputs": [],
    "source": []
