--- a/daily.ipynb
+++ b/daily.ipynb
@@ -431,24 +431,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6a0049ff",
+   "cell_type": "markdown",
+   "id": "b7e40eb0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sortedcontainers import SortedSet\n",
-    "s = SortedSet()\n",
-    "s.add(1)\n",
-    "s.add(5)\n",
-    "s.add(3)\n",
-    "s.add(4)"
+    "## Successful Pairs of Spells and Potions (LC-2300) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5a5f001f",
+   "execution_count": null,
+   "id": "569d94b0",
    "metadata": {},
    "outputs": [
     {
@@ -457,72 +450,73 @@
      "text": [
       "1\n",
       "3\n",
-      "4\n",
-      "5\n"
+      "1\n"
      ]
-    }
-   ],
-   "source": [
-    "for i in s:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "18d06a70",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "2"
+       "[2, 0, 2]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.bisect_right(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "757bfb5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.discard(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "9eb7ce6a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SortedSet([4, 5])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s"
+    "import math\n",
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def successfulPairs(self, spells: List[int], potions: List[int], success: int) -> List[int]:\n",
+    "        # Sort the potions \n",
+    "        potions = sorted(potions)\n",
+    "        # Initiate the results array \n",
+    "        results = []\n",
+    "\n",
+    "        # Perform binary search of this target in potions\n",
+    "        def binary_search(target : int) -> int:\n",
+    "            # Get the left and right pointers \n",
+    "            left = 0\n",
+    "            right = len(potions) - 1\n",
+    "\n",
+    "            while left <= right:\n",
+    "                # Get the mid value \n",
+    "                mid = (left + right) // 2\n",
+    "\n",
+    "                if target <= potions[mid]:\n",
+    "                    right = mid - 1\n",
+    "                \n",
+    "                else:\n",
+    "                    left = mid + 1\n",
+    "            \n",
+    "            return left\n",
+    "\n",
+    "        # Loop through the spells \n",
+    "        for spell in spells:\n",
+    "            # Calculate target for this spell \n",
+    "            target = math.ceil(success / spell)\n",
+    "\n",
+    "            # Perform the binary search to get the index \n",
+    "            optimal_index = binary_search(target)\n",
+    "\n",
+    "            # Get number of elements \n",
+    "            num_for_spells = len(potions) - optimal_index\n",
+    "\n",
+    "            # Append this to final result \n",
+    "            results.append(num_for_spells)\n",
+    "        \n",
+    "        return results\n",
+    "    \n",
+    "sol = Solution()\n",
+    "sol.successfulPairs(spells = [3,1,2], potions = [8,5,8], success = 16)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569d94b0",
+   "id": "cfbfa298",
    "metadata": {},
    "outputs": [],
    "source": []
