revision and notes

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "12de1d22",
    "metadata": {},
    "outputs": [],
@@ -492,21 +492,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b187c56a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid = [\n",
     "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
@@ -674,6 +663,70 @@
     "\n",
     "        return results"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe766bbf",
+   "metadata": {},
+   "source": [
+    "## Linked List Cycle II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cefb5ec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.next = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def detectCycle(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        # Empty linked list \n",
+    "        if not head or not head.next:\n",
+    "            return None\n",
+    "\n",
+    "        # Initialise the slow and fast pointers \n",
+    "        slow, fast = head, head\n",
+    "\n",
+    "        # Check if cycle exists \n",
+    "        # Iterate through nodes \n",
+    "        while fast and fast.next:\n",
+    "            # Shift the pointers \n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "\n",
+    "            # Check if both are same \n",
+    "            if slow == fast:\n",
+    "                # Cycle detected\n",
+    "                slow = head\n",
+    "                break\n",
+    "\n",
+    "        else:\n",
+    "            # No cycle detected \n",
+    "            return None\n",
+    "        \n",
+    "        while slow != fast:\n",
+    "            # Move both the pointers in same direcitons \n",
+    "            slow = slow.next\n",
+    "            fast = fast.next \n",
+    "\n",
+    "        # Return the node\n",
+    "        return slow\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a96bb4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
