--- a/daily.ipynb
+++ b/daily.ipynb
@@ -506,18 +506,7 @@
    "execution_count": null,
    "id": "cfbfa298",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def maxArea(self, height: List[int]) -> int:\n",
@@ -552,9 +541,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b0a8aea",
+   "metadata": {},
+   "source": [
+    "## 📌🔖 Trapping Rain Water\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d43423c",
+   "metadata": {},
+   "source": [
+    "#### 1. Sub-Optimal Solution "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "338a4275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def trap(self, height: List[int]) -> int:\n",
+    "        # Case when input is empty \n",
+    "        if len(height) == 0:\n",
+    "            return 0\n",
+    "        \n",
+    "        # Initialize the variables \n",
+    "        left_max = [0] * len(height)\n",
+    "        right_max = [0] * len(height)\n",
+    "\n",
+    "        # Initlase the current max values \n",
+    "        curr_left_max= 0\n",
+    "        curr_right_max = 0\n",
+    "\n",
+    "        # Fill the values for left max \n",
+    "        for i in range(1, len(height)):\n",
+    "            # Calculate left max till previous point \n",
+    "            curr_left_max = max(curr_left_max, height[i-1])\n",
+    "            left_max[i] = curr_left_max\n",
+    "\n",
+    "        # Fill in the values for right max \n",
+    "        for i in range(2, len(height) + 1):\n",
+    "            # Caculate right max\n",
+    "            curr_right_max = max(curr_right_max, height[-i+1]) \n",
+    "            right_max[-i] = curr_right_max\n",
+    "\n",
+    "        # Calculate the water trapped\n",
+    "        trapped_water = 0\n",
+    "        for i in range(len(height)):\n",
+    "            water_here = min(left_max[i], right_max[i]) - height[i]\n",
+    "            if water_here > 0:\n",
+    "                trapped_water += 0\n",
+    "\n",
+    "        \n",
+    "        return trapped_water\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.trap(height = [4,2,0,3,2,5])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "338a4275",
+   "id": "4d13c6b8",
    "metadata": {},
    "outputs": [],
    "source": []
