--- a/revision.ipynb
+++ b/revision.ipynb
@@ -721,9 +721,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f152bd8d",
+   "metadata": {},
+   "source": [
+    "## Two Sum "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a96bb4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
+    "        # Create a set \n",
+    "        diff = {}\n",
+    "\n",
+    "        # Loop through the elements \n",
+    "        for idx, num in enumerate(nums):\n",
+    "            # Calculate the diff \n",
+    "            difference = target - num\n",
+    "\n",
+    "            # Check if this difference exists in the diff \n",
+    "            if difference in diff:\n",
+    "                # Exists \n",
+    "                return [idx, diff[difference]]\n",
+    "            \n",
+    "            # Add current num to diff \n",
+    "            diff[num] = idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb57df92",
    "metadata": {},
    "outputs": [],
    "source": []
