--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e897c811",
    "metadata": {},
    "outputs": [],
@@ -161,21 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f62719bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.ListNode at 0x2805ea5c2d0>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "head = ListNode(1)\n",
     "head.next = ListNode(2)\n",
@@ -188,39 +177,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d39c0f4",
+   "metadata": {},
+   "source": [
+    "## Add Two Numbers (LC-2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e781c9",
+   "id": "3a59f529",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition for singly-linked list.\n",
+    "from typing import Optional\n",
+    "\n",
     "class ListNode:\n",
     "    def __init__(self, val=0, next=None):\n",
     "        self.val = val\n",
     "        self.next = next\n",
     "\n",
     "class Solution:\n",
-    "    def removeNthFromEnd(self, head: Optional[ListNode], n: int) -> Optional[ListNode]:\n",
-    "        # Loop to move fast pointer to n position from start \n",
-    "        fast = head \n",
-    "        slow = head \n",
-    "        for _ in range(n):\n",
-    "            if not fast.next:\n",
-    "                return\n",
-    "            fast = fast.next\n",
+    "    def addTwoNumbers(self, l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        # Initialise the variables\n",
+    "        result_head = ListNode()\n",
+    "        curr_node = result_head\n",
     "\n",
-    "        # Loop to move fast and slow pointer in same direction one step each till end\n",
-    "        while fast.next:\n",
-    "            fast = fast.next\n",
-    "            slow = slow.next\n",
+    "        # Start the loop to iterate over both linked lists\n",
+    "        carry = 0\n",
+    "        while l1 or l2 or carry:\n",
+    "            # Get the number \n",
+    "            l1_val = l1.val if l1 else 0\n",
+    "            l2_val = l2.val if l2 else 0\n",
+    "\n",
+    "            # Sum of both \n",
+    "            l1_l2_sum = l1_val + l2_val + carry\n",
+    "\n",
+    "            # Check if carry needs to be taken forward \n",
+    "            if l1_l2_sum >= 10:\n",
+    "                carry = 1 \n",
+    "                curr_num = l1_l2_sum - 10\n",
+    "            \n",
+    "            else:\n",
+    "                carry = 0\n",
+    "                curr_num = l1_l2_sum\n",
+    "\n",
+    "            # Create a new node\n",
+    "            curr_node.next = ListNode(val= curr_num)\n",
+    "            curr_node =  curr_node.next\n",
+    "            \n",
+    "            # Move to next number \n",
+    "            if l1:\n",
+    "                l1 = l1.next\n",
+    "            \n",
+    "            if l2:\n",
+    "                l2 = l2.next\n",
     "        \n",
-    "        # Remove the mentioned element \n",
-    "        slow.next = slow.next.next\n",
-    "     \n",
-    "\n",
-    "        "
+    "        return result_head.next"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "98238af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "18 % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f48ed6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
