--- a/revision.ipynb
+++ b/revision.ipynb
@@ -755,12 +755,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bb5fa2c",
+   "metadata": {},
+   "source": [
+    "## Find the Duplicate Number (LC-287)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bb57df92",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: List[int]) -> int:\n",
+    "        # Initialise the variable \n",
+    "        curr  = 0\n",
+    "\n",
+    "        # Loop through the nums\n",
+    "        for idx, num in enumerate(nums):\n",
+    "            # Check for the values at that index \n",
+    "            if nums[num] == curr:\n",
+    "                return num\n",
+    "            \n",
+    "            # Change the value \n",
+    "            curr = nums[num]\n"
+   ]
   }
  ],
  "metadata": {
