--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -238,30 +238,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "98238af5",
+   "cell_type": "markdown",
+   "id": "1c1f0825",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "18 % 10"
+    "## 📌 Valid Parentheses (LC-20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3f48ed6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        # Dictionary of opening and closing brackets \n",
+    "        bracket_dict = {'(':')', '{': '}', '[': ']'}\n",
+    "        occurance = []\n",
+    "\n",
+    "        # Loop through the input \n",
+    "        for bracket in s:\n",
+    "            # Check what type of bracket is this \n",
+    "            if bracket in bracket_dict:\n",
+    "                # Its an opening bracket, add it to occurance list\n",
+    "                occurance.append(bracket)\n",
+    "                            \n",
+    "            # Its a type of closing bracket \n",
+    "            else:\n",
+    "                if occurance:\n",
+    "                    # Check the first brancket to be closed \n",
+    "                    to_close_first = occurance.pop()\n",
+    "\n",
+    "                    # Check if same \n",
+    "                    if bracket == bracket_dict[to_close_first]:\n",
+    "                        # Everything is in order \n",
+    "                        continue\n",
+    "\n",
+    "                return False\n",
+    "                \n",
+    "        # Check for any value in occurance\n",
+    "        if occurance:\n",
+    "            return False\n",
+    "            \n",
+    "        return True\n",
+    "    \n",
+    "sol = Solution()\n",
+    "sol.isValid(s =\"[\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9454eac",
    "metadata": {},
    "outputs": [],
    "source": []
