best time to buy stock

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -846,6 +846,92 @@
     "\n",
     "        return False"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb76529d",
+   "metadata": {},
+   "source": [
+    "## 📌 Valid Parentheses (LC-20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47773c4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        # Dictionary of opening and closing brackets \n",
+    "        bracket_dict = {'(':')', '{': '}', '[': ']'}\n",
+    "        occurance = []\n",
+    "\n",
+    "        # Loop through the input \n",
+    "        for bracket in s:\n",
+    "            # Check what type of bracket is this \n",
+    "            if bracket in bracket_dict:\n",
+    "                # Its an opening bracket, add it to occurance list\n",
+    "                occurance.append(bracket)\n",
+    "                            \n",
+    "            # Its a type of closing bracket \n",
+    "            else:\n",
+    "                if occurance:\n",
+    "                    # Check the first brancket to be closed \n",
+    "                    to_close_first = occurance.pop()\n",
+    "\n",
+    "                    # Check if same \n",
+    "                    if bracket == bracket_dict[to_close_first]:\n",
+    "                        # Everything is in order \n",
+    "                        continue\n",
+    "\n",
+    "                return False\n",
+    "                \n",
+    "        # Check for any value in occurance\n",
+    "        if occurance:\n",
+    "            return False\n",
+    "            \n",
+    "        return True\n",
+    "    \n",
+    "sol = Solution()\n",
+    "sol.isValid(s =\"[\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "621ae422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        # Initialise\n",
+    "        max_profit = 0\n",
+    "        minimum_so_far = float('inf')\n",
+    "\n",
+    "        # Loop through the prices \n",
+    "        for price in prices:\n",
+    "            # Check if its minimum\n",
+    "            if price <= minimum_so_far:\n",
+    "                minimum_so_far =  min(minimum_so_far, price)\n",
+    "            \n",
+    "            else:\n",
+    "                max_profit = max(max_profit, price - minimum_so_far)\n",
+    "        \n",
+    "        return max_profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7127790a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
