best time to buy stocks II

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -899,6 +899,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff37495e",
+   "metadata": {},
+   "source": [
+    "## 📌 Best Time to Buy and Sell Stock (LC-)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "621ae422",
@@ -926,9 +934,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbf074fa",
+   "metadata": {},
+   "source": [
+    "## 📌 Best Time to Buy and Sell Stock II (LC-122)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7127790a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        # Initialise Variables \n",
+    "        purchased = float('inf')\n",
+    "        profit = 0       \n",
+    "\n",
+    "        # Loop \n",
+    "        for price in prices:\n",
+    "            # Purchase\n",
+    "            if price < purchased:\n",
+    "                purchased = price\n",
+    "                continue\n",
+    "            \n",
+    "            # Sell\n",
+    "            else:\n",
+    "                # Book profit \n",
+    "                profit += price - purchased\n",
+    "\n",
+    "                # Mark it as purchased for next \n",
+    "                purchased = price\n",
+    "        \n",
+    "        return profit\n",
+    "    \n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.maxProfit(prices = [7,1,5,3,6,4])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7127790a",
+   "id": "bf4e32b2",
    "metadata": {},
    "outputs": [],
    "source": []
